--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -4,10 +4,10 @@ repository:
   # See https://developer.github.com/v3/repos/#edit for all available settings.
 
   # A short description of the repository that will show up on GitHub
-  description: 📦 Template repository for AtomicGo repositories
+  description: 🦖 Drop-in replacement for golang.org/x/exp/constraints with more predefined constraints
 
   # A comma-separated list of topics to set on the repository
-  topics: atomicgo, hacktoberfest, go, golang, golang-library
+  topics: atomicgo, go, golang, golang-library, hacktoberfest, generics, constraints
 
   # Either `true` to make the repository private, or `false` to make it public.
   private: false
